DB connection , few more additions in code related to file.
