# restapi/operations/add_movie/postmovie_responses.go
@@ -1,0 +1,160 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package add_movie
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"MoviesDB/models"
+)
+
+// PostmovieOKCode is the HTTP code returned for type PostmovieOK
+const PostmovieOKCode int = 200
+
+/*PostmovieOK Movie Uploaded Successfully
+
+swagger:response postmovieOK
+*/
+type PostmovieOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *PostmovieOKBody `json:"body,omitempty"`
+}
+
+// NewPostmovieOK creates PostmovieOK with default headers values
+func NewPostmovieOK() *PostmovieOK {
+
+	return &PostmovieOK{}
+}
+
+// WithPayload adds the payload to the postmovie o k response
+func (o *PostmovieOK) WithPayload(payload *PostmovieOKBody) *PostmovieOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the postmovie o k response
+func (o *PostmovieOK) SetPayload(payload *PostmovieOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostmovieOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostmovieInternalServerErrorCode is the HTTP code returned for type PostmovieInternalServerError
+const PostmovieInternalServerErrorCode int = 500
+
+/*PostmovieInternalServerError Server Error
+
+swagger:response postmovieInternalServerError
+*/
+type PostmovieInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPostmovieInternalServerError creates PostmovieInternalServerError with default headers values
+func NewPostmovieInternalServerError() *PostmovieInternalServerError {
+
+	return &PostmovieInternalServerError{}
+}
+
+// WithPayload adds the payload to the postmovie internal server error response
+func (o *PostmovieInternalServerError) WithPayload(payload *models.Error) *PostmovieInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the postmovie internal server error response
+func (o *PostmovieInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostmovieInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*PostmovieDefault error
+
+swagger:response postmovieDefault
+*/
+type PostmovieDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPostmovieDefault creates PostmovieDefault with default headers values
+func NewPostmovieDefault(code int) *PostmovieDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostmovieDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the postmovie default response
+func (o *PostmovieDefault) WithStatusCode(code int) *PostmovieDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the postmovie default response
+func (o *PostmovieDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the postmovie default response
+func (o *PostmovieDefault) WithPayload(payload *models.Error) *PostmovieDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the postmovie default response
+func (o *PostmovieDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostmovieDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
